# camt-exceptions

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
camt_exceptions/: __init__.py  generator.py  server.py
camt_exceptions/templates/camt.029.001.14/: template.xml
camt_exceptions/templates/camt.056.001.12/: template.xml
tests/: test_generator.py  test_server.py  test_stress.py
