[tool.poetry]
name = "camt-exceptions"
version = "0.0.2"
description = "Generate and validate ISO 20022 Exceptions & Investigations (E&I) camt messages -- camt.056 Payment Cancellation Request and camt.029 Resolution of Investigation -- with an MCP server."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/camt-exceptions"
homepage = "https://camt-exceptions.com"
keywords = [
    "iso-20022",
    "camt056",
    "exceptions",
    "investigations",
    "payment-cancellation",
    "mcp",
    "payments",
    "fintech",
]
packages = [
    { include = "camt_exceptions" },
]
include = [
    "camt_exceptions/templates/**/*.xsd",
    "camt_exceptions/templates/**/*.xml",
]

[tool.poetry.scripts]
camt-exceptions-mcp = "camt_exceptions.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = ">=1.2"
jinja2 = ">=3.0"
xmlschema = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=camt_exceptions",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["camt_exceptions"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = ["mcp.*", "xmlschema.*", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The server tools and generator return bare JSON-shaped data / rendered
# strings from loosely-typed inputs. Relax the two strict checks that trips
# while keeping the rest of strict mode in force.
module = ["camt_exceptions.server", "camt_exceptions.generator"]
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]
